force-app/main/default/objects/DonorPaymentMethod__c/DonorPaymentMethod__c.object-meta.xml
<CustomObject>
    <label>Donor Payment Method</label>
    <nameField>
        <label>Donor Payment Method Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Donor Payment Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>