force-app/main/default/objects/DonorPaymentMethod__c/fields/Card_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Card_Expiration_Date__c</fullName>
    <label>Card Expiration Date</label>
    <type>Date</type>
</CustomField>