force-app/main/default/objects/DonorPaymentMethod__c/fields/donor_payment_method_id__c.field-meta.xml
<CustomField>
    <fullName>donor_payment_method_id__c</fullName>
    <externalId>true</externalId>
    <label>donor payment method id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>