force-app/main/default/objects/DonorPaymentMethod__c/fields/donorId__c.field-meta.xml
<CustomField>
    <fullName>donorId__c</fullName>
    <label>donorId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>