force-app/main/default/objects/DonorPaymentMethod__c/fields/FourDegit__c.field-meta.xml
<CustomField>
    <fullName>FourDegit__c</fullName>
    <label>FourDigit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>