force-app/main/default/objects/DonorPaymentMethod__c/fields/testpicklist__c.field-meta.xml
<CustomField>
    <fullName>testpicklist__c</fullName>
    <label>testpicklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>test_globel</valueSetName>
    </valueSet>
</CustomField>