force-app/main/default/objects/DonorPaymentMethod__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>FourDegit__c</columns>
    <columns>Type__c</columns>
    <columns>donor_payment_method_id__c</columns>
    <columns>donorId__c</columns>
    <columns>Card_Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>